# sidechain-decoding

./: README.md  pyproject.toml
data_and_trained_models/: README.md
data_and_trained_models/energy_min_models/: ALA_BAT_object.pkl  ARG_BAT_object.pkl  ASH_BAT_object.pkl  ASN_BAT_object.pkl  ASP_BAT_object.pkl  CYS_BAT_object.pkl  GLH_BAT_object.pkl  GLN_BAT_object.pkl  GLU_BAT_object.pkl  GLY_BAT_object.pkl  HID_BAT_object.pkl  HIE_BAT_object.pkl  HIP_BAT_object.pkl  ILE_BAT_object.pkl  LEU_BAT_object.pkl  LYS_BAT_object.pkl  MET_BAT_object.pkl  NPRO_BAT_object.pkl  PHE_BAT_object.pkl  PRO_BAT_object.pkl  SER_BAT_object.pkl  THR_BAT_object.pkl  TRP_BAT_object.pkl  TYR_BAT_object.pkl  VAL_BAT_object.pkl
data_and_trained_models/query_pdb/: query_rcsb_protein_training_set.json  results.json  submit_query.sh  unique_pdbids.txt
data_and_trained_models/traj_trained_models/: ASP_BAT_object.pkl  GLU_BAT_object.pkl  Nterm_BAT_object.pkl  PRO_BAT_object.pkl  THR_BAT_object.pkl  (+2 more)
environments/: openmm_sim.yaml  protein_env.yaml  tf_protein_env.yaml
scdecode/: __init__.py  analysis_tools.py  cluster_cg_model.py  coord_transforms.py  data_io.py  flow_model_CG.py  full_protein_decoding.py  model_training.py  perform_energy_min.py  prep_pdb.py  traj_model_training.py  unconditional.py
scripts/: run_CG_flow_model.sh  run_analysis.sh  run_full_decoding_analysis.sh  run_input_creation.sh  run_simulations.sh  run_training.sh  run_traj_input_creation.sh  run_uncond_analysis.sh  run_uncond_input_creation.sh  run_uncond_training.sh
simulations/: openmm_sims.py  pyrosetta_sims.py
(+64 files in other folders)
