[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scdecode"
version = "0.0.1"
description = "All-atom sidechain prediction from coarse-grained protein models"
readme = "README.md"
authors = [{ name = "Jacob I. Monroe", email = "jacob.monroe@uark.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = ["vaemolsim",]

requires-python = ">=3.8"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
where = ["."]

[tool.setuptools.package-data]
vaemolsim = [
    "py.typed"
]

# [project.scripts]
# prep_pdb = "scdecode.prep_pdb"
# generate_input_data = "scdecode.data_io"
